[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/bullet141.png" type="Texture" id=1]
[ext_resource path="res://bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.99992, 19.4639 )

[node name="bullet" type="Area2D"]
priority = 2.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.5, 1, 1, 1 )
scale = Vector2( 0.215, 0.192374 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.00648969
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -3.5 )
scale = Vector2( 1, 0.85 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
